--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CatsByme</string>
+    <string name="app_bottom_navigation_favorites">Favorites</string>
+    <string name="app_bottom_navigation_search">Search</string>
+    <string name="app_bottom_navigation_home">Home</string>
 </resources>
