--- a/features/breeds/src/main/res/values/strings.xml
+++ b/features/breeds/src/main/res/values/strings.xml
@@ -10,4 +10,18 @@
     <string name="home_generic_error">An error occurred. Try again</string>
     <string name="home_retry">Retry</string>
 
+    // Details
+    <string name="details_temperament_label">Temperament: %s</string>
+    <string name="details_temperament">Temperament %s</string>
+    <string name="details_life_Span">Life Span %s</string>
+    <string name="details_origin_label">Origin: %s</string>
+    <string name="details_life_span_label">Life Span: %s</string>
+    <string name="details_search_">search_icon</string>
+    <string name="details_information">Catsby Information</string>
+    <string name="details_chip_intelligence">Intelligence: %s</string>
+    <string name="details_chip_child_friendly">Child Friendly: %s</string>
+    <string name="details_chip_social_needs">Social Needs: %s</string>
+    <string name="details_chip_healthy_issues">Healthy Issues: %s</string>
+    <string name="details_chip_rating_intelligence">Rating:: </string>
+    <string name="details_chip_vocatisation">Vocalization: %s</string>
 </resources>
