:sparkles: feat:[CBM-4-5] Implement navegation to photos and refactor README.md

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_bottom_navigation_favorites">Favorites</string>
     <string name="app_bottom_navigation_search">Search</string>
     <string name="app_bottom_navigation_home">Home</string>
+    <string name="app_photos">Photos</string>
 </resources>
